--- a/src/SlateEditor/Toolbar.scss
+++ b/src/SlateEditor/Toolbar.scss
@@ -7,21 +7,8 @@
     min-width: 32px;
     transition: 0.1s ease-in;
     &.active {
-      background-color: #333;
+      background-color: #007bff;
       color: white;
-    }
-  }
-  .image-upload {
-    position: relative;
-    & .url-input-container {
-      display: flex;
-      flex-flow: row;
-      position: absolute;
-      left: 50%;
-      margin-left: -120px;
-      bottom: 28px;
-      background: #333;
-      padding: 8px;
     }
   }
 }
