Add image and schema

--- a/src/SlateEditor/Image/Image.scss
+++ b/src/SlateEditor/Image/Image.scss
@@ -12,6 +12,9 @@
   }
 
   & .image {
+    & > img {
+      max-width: 100%;
+    }
     position: relative;
     & .image-align {
       position: absolute;
