--- a/src/SlateEditor/TextEditor.scss
+++ b/src/SlateEditor/TextEditor.scss
@@ -1,27 +1,11 @@
-.tooltip-icon-button {
-  border: 0;
-  background: white;
+.DraftEditor-root {
+  min-height: 300px;
+  background: #fafafa;
+}
+.editor :global(.public-DraftEditor-content) {
+  max-width: 400px;
 }
 
-pre {
-  background: #f3f3f3;
-}
-
-blockquote {
-  background: #f9f9f9;
-  border-left: 10px solid #ccc;
-  margin: 1.5em 10px;
-  padding: 0.5em 10px;
-  quotes: "\201C""\201D""\2018""\2019";
-  &:before {
-    color: #ccc;
-    content: open-quote;
-    font-size: 4em;
-    line-height: 0.1em;
-    margin-right: 0.25em;
-    vertical-align: -0.4em;
-  }
-  & p {
-    display: inline;
-  }
+.controls {
+  background: #6c757d;
 }
