--- a/src/DraftEditor/Editor.scss
+++ b/src/DraftEditor/Editor.scss
@@ -1,5 +1,8 @@
 
 .editor {
+  &:focus {
+    outline: none;
+  }
   & blockquote {
     position: relative;
     padding-left: 1em;
@@ -8,5 +11,12 @@
     font-family: 'Roboto', serif;
     font-weight: 100;
   }
-  
+  & a {
+    color: #0095f4;
+    text-decoration: underline;
+
+  }
+  & .draftJsHashtagPlugin__hashtag__1wMVC {
+    color: #9e9e9e;
+  }  
 }
