--- a/src/DraftEditor/Editor.scss
+++ b/src/DraftEditor/Editor.scss
@@ -1,6 +1,6 @@
-@import "node_modules/bootstrap/scss/functions";
-@import "node_modules/bootstrap/scss/variables";
-@import "node_modules/bootstrap/scss/mixins";
+@import 'node_modules/bootstrap/scss/functions';
+@import 'node_modules/bootstrap/scss/variables';
+@import 'node_modules/bootstrap/scss/mixins';
 
 .editor {
   &:focus {
@@ -17,21 +17,21 @@
   & a {
     color: #0095f4;
     text-decoration: underline;
+  }
 
-  } 
-  
-  & .inline-toolbar {
+  & .inline-toolbar-draft {
     display: flex;
     background: #333;
     flex-wrap: nowrap;
     border-radius: 4px;
-    box-shadow: 0px 1px 3px 0px rgba(220,220,220,1);
+    box-shadow: 0px 1px 3px 0px rgba(220, 220, 220, 1);
     box-sizing: border-box;
-    &:after, &:before {
+    &:after,
+    &:before {
       top: 100%;
       left: 50%;
       border: solid transparent;
-      content: " ";
+      content: ' ';
       height: 0;
       width: 0;
       position: absolute;
@@ -51,9 +51,9 @@
     }
     & button {
       background: none;
-      color: lighten(theme-color("dark"),45%);
+      color: lighten(theme-color('dark'), 45%);
       &.btn-active {
-      color: lighten(theme-color("dark"),80%);
+        color: lighten(theme-color('dark'), 80%);
       }
     }
   }
