--- a/src/SlateEditor/TextEditor.scss
+++ b/src/SlateEditor/TextEditor.scss
@@ -1,17 +1,9 @@
-.DraftEditor-root {
-  min-height: 300px;
-  background: #fafafa;
-}
-.editor :global(.public-DraftEditor-content) {
-  max-width: 400px;
-}
-
 blockquote {
   background: #f9f9f9;
   border-left: 10px solid #ccc;
   margin: 1.5em 10px;
   padding: 0.5em 10px;
-  quotes: "\201C""\201D""\2018""\2019";
+  quotes: '\201C''\201D''\2018''\2019';
   &:before {
     color: #ccc;
     content: open-quote;
