--- a/src/DraftEditor/prism.css
+++ b/src/DraftEditor/prism.css
@@ -1,189 +1,207 @@
-/**
-* xonokai theme for JavaScript, CSS and HTML
-* based on: https://github.com/MoOx/sass-prism-theme-base by Maxime Thirouin ~ MoOx --> http://moox.fr/ , which is Loosely based on Monokai textmate theme by http://www.monokai.nl/
-* license: MIT; http://moox.mit-license.org/
-*/
 code[class*='language-'],
 pre[class*='language-'] {
-  -moz-tab-size: 2;
-  -o-tab-size: 2;
-  tab-size: 2;
+  text-align: left;
+  white-space: pre;
+  word-spacing: normal;
+  word-break: normal;
+  word-wrap: normal;
+  color: #90a4ae;
+  background: #fafafa;
+  font-family: Roboto Mono, monospace;
+  font-size: 1em;
+  line-height: 1.5em;
+
+  -moz-tab-size: 4;
+  -o-tab-size: 4;
+  tab-size: 4;
+
   -webkit-hyphens: none;
   -moz-hyphens: none;
   -ms-hyphens: none;
   hyphens: none;
-  white-space: pre;
-  white-space: pre-wrap;
-  word-wrap: normal;
-  font-family: Menlo, Monaco, 'Courier New', monospace;
-  font-size: 14px;
-  color: #76d9e6;
-  text-shadow: none;
 }
 
-pre > code[class*='language-'] {
-  font-size: 1em;
+code[class*='language-']::-moz-selection,
+pre[class*='language-']::-moz-selection,
+code[class*='language-'] ::-moz-selection,
+pre[class*='language-'] ::-moz-selection {
+  background: #cceae7;
+  color: #263238;
 }
 
-pre[class*='language-'],
+code[class*='language-']::selection,
+pre[class*='language-']::selection,
+code[class*='language-'] ::selection,
+pre[class*='language-'] ::selection {
+  background: #cceae7;
+  color: #263238;
+}
+
 :not(pre) > code[class*='language-'] {
-  background: #2a2a2a;
+  white-space: normal;
+  border-radius: 0.2em;
+  padding: 0.1em;
 }
 
 pre[class*='language-'] {
-  padding: 15px;
-  border-radius: 4px;
-  border: 1px solid #e1e1e8;
   overflow: auto;
   position: relative;
+  margin: 0.5em 0;
+  padding: 1.25em 1em;
 }
 
-pre[class*='language-'] code {
-  white-space: pre;
-  display: block;
+.language-css > code,
+.language-sass > code,
+.language-scss > code {
+  color: #f76d47;
 }
 
-:not(pre) > code[class*='language-'] {
-  padding: 0.15em 0.2em 0.05em;
-  border-radius: 0.3em;
-  border: 0.13em solid #7a6652;
-  box-shadow: 1px 1px 0.3em -0.1em #000 inset;
-}
-
-.token.namespace {
+[class*='language-'] .namespace {
   opacity: 0.7;
 }
 
-.token.comment,
-.token.prolog,
-.token.doctype,
+.token.atrule {
+  color: #7c4dff;
+}
+
+.token.attr-name {
+  color: #39adb5;
+}
+
+.token.attr-value {
+  color: #f6a434;
+}
+
+.token.attribute {
+  color: #f6a434;
+}
+
+.token.boolean {
+  color: #7c4dff;
+}
+
+.token.builtin {
+  color: #39adb5;
+}
+
 .token.cdata {
-  color: #6f705e;
+  color: #39adb5;
 }
 
-.token.operator,
-.token.boolean,
-.token.number {
-  color: #a77afe;
+.token.char {
+  color: #39adb5;
 }
 
-.token.attr-name,
-.token.string {
-  color: #e6d06c;
+.token.class {
+  color: #39adb5;
 }
 
-.token.entity,
-.token.url,
-.language-css .token.string,
-.style .token.string {
-  color: #e6d06c;
+.token.class-name {
+  color: #6182b8;
 }
 
-.token.selector,
-.token.inserted {
-  color: #a6e22d;
+.token.comment {
+  color: #aabfc9;
 }
 
-.token.atrule,
-.token.attr-value,
-.token.keyword,
-.token.important,
+.token.constant {
+  color: #7c4dff;
+}
+
 .token.deleted {
-  color: #ef3b7d;
+  color: #e53935;
 }
 
-.token.regex,
-.token.statement {
-  color: #76d9e6;
-}
-
-.token.placeholder,
-.token.variable {
-  color: #fff;
-}
-
-.token.important,
-.token.statement,
-.token.bold {
-  font-weight: bold;
-}
-
-.token.punctuation {
-  color: #bebec5;
+.token.doctype {
+  color: #aabfc9;
 }
 
 .token.entity {
-  cursor: help;
+  color: #e53935;
 }
 
-.token.italic {
-  font-style: italic;
+.token.function {
+  color: #7c4dff;
 }
 
-code.language-markup {
-  color: #f9f9f9;
+.token.hexcode {
+  color: #f76d47;
 }
 
-code.language-markup .token.tag {
-  color: #ef3b7d;
+.token.id {
+  color: #7c4dff;
+  font-weight: bold;
 }
 
-code.language-markup .token.attr-name {
-  color: #a6e22d;
+.token.important {
+  color: #7c4dff;
+  font-weight: bold;
 }
 
-code.language-markup .token.attr-value {
-  color: #e6d06c;
+.token.inserted {
+  color: #39adb5;
 }
 
-code.language-markup .token.style,
-code.language-markup .token.script {
-  color: #76d9e6;
+.token.keyword {
+  color: #7c4dff;
 }
 
-code.language-markup .token.script .token.keyword {
-  color: #76d9e6;
+.token.number {
+  color: #f76d47;
 }
 
-/* Line highlight plugin */
-pre[class*='language-'][data-line] {
-  position: relative;
-  padding: 1em 0 1em 3em;
+.token.operator {
+  color: #39adb5;
 }
 
-pre[data-line] .line-highlight {
-  position: absolute;
-  left: 0;
-  right: 0;
-  padding: 0;
-  margin-top: 1em;
-  background: rgba(255, 255, 255, 0.08);
-  pointer-events: none;
-  line-height: inherit;
-  white-space: pre;
+.token.prolog {
+  color: #aabfc9;
 }
 
-pre[data-line] .line-highlight:before,
-pre[data-line] .line-highlight[data-end]:after {
-  content: attr(data-start);
-  position: absolute;
-  top: 0.4em;
-  left: 0.6em;
-  min-width: 1em;
-  padding: 0.2em 0.5em;
-  background-color: rgba(255, 255, 255, 0.4);
-  color: black;
-  font: bold 65%/1 sans-serif;
-  height: 1em;
-  line-height: 1em;
-  text-align: center;
-  border-radius: 999px;
-  text-shadow: none;
-  box-shadow: 0 1px 1px rgba(255, 255, 255, 0.7);
+.token.property {
+  color: #39adb5;
 }
 
-pre[data-line] .line-highlight[data-end]:after {
-  content: attr(data-end);
-  top: auto;
-  bottom: 0.4em;
+.token.pseudo-class {
+  color: #f6a434;
+}
+
+.token.pseudo-element {
+  color: #f6a434;
+}
+
+.token.punctuation {
+  color: #39adb5;
+}
+
+.token.regex {
+  color: #6182b8;
+}
+
+.token.selector {
+  color: #e53935;
+}
+
+.token.string {
+  color: #f6a434;
+}
+
+.token.symbol {
+  color: #7c4dff;
+}
+
+.token.tag {
+  color: #e53935;
+}
+
+.token.unit {
+  color: #f76d47;
+}
+
+.token.url {
+  color: #e53935;
+}
+
+.token.variable {
+  color: #e53935;
 }
