Improving Slate editor

--- a/src/SlateEditor/Button/LinkButton.scss
+++ b/src/SlateEditor/Button/LinkButton.scss
@@ -2,16 +2,31 @@
   position: absolute;
   display: flex;
   height: 100%;
-  flex-direction: row;
   width: 100%;
-  & > input {
+  flex-direction: row;
+  padding: 0 4px;
+  & input {
     margin: 4px 2px;
     height: 30px;
     &::placeholder {
       color: #888;
     }
-    background-color: #222;
+    background-color: #333;
+    &:focus {
+      color: #ccc;
+      outline: 0;
+      background-color: #333;
+    }
     color: #ccc;
     border: none;
+    &.invalid {
+      box-shadow: 0 0 0 0.2rem rgba(200, 20, 20, 0.5) !important;
+    }
+  }
+  & .btn-close {
+    padding: 0 4px;
+  }
+  & .btn-anchor {
+    background-color: #111;
   }
 }
