--- a/src/SlateEditor/TextEditor.scss
+++ b/src/SlateEditor/TextEditor.scss
@@ -1,22 +1,8 @@
 blockquote {
-  background: #f9f9f9;
-  border-left: 10px solid #ccc;
-  margin: 1.5em 10px;
-  padding: 0.5em 10px;
-  quotes: '\201C''\201D''\2018''\2019';
-  &:before {
-    color: #ccc;
-    content: open-quote;
-    font-size: 4em;
-    line-height: 0.1em;
-    margin-right: 0.25em;
-    vertical-align: -0.4em;
-  }
-  & p {
-    display: inline;
-  }
-
-  & .color-picker {
-    margin-right: 65px;
-  }
+  border-left: 2px solid #ddd;
+  margin-left: 0;
+  margin-right: 0;
+  padding-left: 10px;
+  color: #aaa;
+  font-style: italic;
 }
